// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create CE K8s Connector Wizard Proceed with following steps 1`] = `
<div>
  <div
    style="display: flex; max-height: 800px;"
  >
    <div
      style="width: 1159px; position: relative;"
    >
      <div
        class="StepWizard--main ceK8SConnector StepWizard--navBar"
      >
        <div
          class="StepWizard--navBarList"
        >
          <span
            class="StepWizard--header"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="app-kubernetes"
            >
              <svg
                height="40"
                viewBox="0 0 32 30"
                width="40"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fill-rule="nonzero"
                >
                  <path
                    d="M15.94.023c-.228 0-.457 0-.685.229L4.512 5.28c-.457.229-.915.686-1.143 1.372L.626 18.08c-.229.457 0 1.143.229 1.6l.228.229 7.314 9.143c.458.457.915.685 1.6.685h11.886c.686 0 1.143-.228 1.6-.685l7.314-9.143c.458-.457.458-1.143.458-1.6L28.512 6.88c-.229-.685-.457-1.143-1.143-1.371L16.626.48c0-.228-.457-.457-.686-.457z"
                    fill="#326CE5"
                  />
                  <path
                    d="M15.94 3.909c-.457 0-.685.228-.685.686v2.057c0 .228-.229.228-.229.228v.229c-.457 0-.686 0-1.143.228-1.6.458-3.2 1.143-4.114 2.286l-.229-.228h-.457c-.228-.23-.457-.458-.914-.686l-.457-.457h-.229c-.228 0-.228-.229-.457-.229s-.457 0-.457.229c-.229.228-.229.685.228.914h.23c.228.229.456.229.456.229.457.228.686.457.914.685 0 0 .23.229.23.457l.228.229c-1.143 1.6-1.6 3.657-1.372 5.714h-.228l-.229.229c-.229 0-.686.228-1.143.228H4.97c-.457 0-.686.458-.457.686 0 .229.457.457.914.457h.229c.228 0 .457-.228.685-.228.457-.229.686-.229 1.143-.229.229 0 .229 0 .457.229h.229c.686 2.057 2.057 3.657 3.657 4.571l-.229.229v.457c-.228.228-.228.686-.685 1.143-.229.228-.229.228-.229.457v.228c-.228.458 0 .686.229.915.228.228.685 0 .914-.457v-.23c0-.228.229-.456.229-.685.228-.457.228-.914.457-1.143 0 0 .228 0 .228-.228l.229-.229c1.371.457 3.2.686 4.8.457.457 0 .686-.228 1.143-.228l.228.228s.229 0 .229.229c.228.229.228.686.457 1.143 0 .228 0 .457.229.686v.228c.228.457.457.457.914.457.228-.228.457-.457.228-.914v-.229c0-.228-.228-.228-.228-.457-.229-.457-.457-.685-.457-.914v-.686c1.828-1.143 2.971-2.743 3.657-4.571h.228s.23-.229.458-.229.685.229 1.142.229c.23 0 .458.228.686.228h.229c.457 0 .685-.228.914-.457 0-.228-.229-.685-.457-.685h-.914c-.458 0-.915 0-1.143-.23-.229 0-.229-.228-.229-.228h-.228c.228-.914 0-2.057-.229-2.971-.229-.914-.686-2.057-1.143-2.743l.229-.228c0-.23 0-.23.228-.458.229-.228.457-.457.915-.685.228 0 .457-.229.457-.229h.228c.229-.228.457-.686.229-.914-.229-.229-.686-.229-.914 0h-.229l-.457.457c-.229.229-.686.686-.914.686h-.458l-.228.228a8.778 8.778 0 00-5.257-2.514v-.229l-.229-.228V5.966v-.914c-.457-.686-.686-1.143-1.143-1.143zm-.685 5.028l-.229 3.429a.492.492 0 01-.457.457h-.229l-2.743-2.057c.915-.914 1.83-1.371 3.2-1.829h.458zm1.6 0c1.371.229 2.742.915 3.885 1.829l-2.743 1.829c-.228.228-.685.228-.685 0l-.229-.23-.228-3.428zm-6.4 3.2l2.514 2.286c.228.229.228.457 0 .686l-.229.228-3.2.915c-.228-1.6 0-2.972.915-4.115zm11.2 0c.457.686.685 1.372.914 2.058.228.685.228 1.37.228 2.057l-3.2-.915c-.228 0-.457-.457-.457-.685 0-.229 0-.229.229-.229l2.286-2.286zm-6.172 2.286h.914l.686.686-.228.914-.915.457-.914-.457-.229-.914.686-.686zm3.2 2.743c.229 0 .229 0 0 0l3.429.457c-.457 1.372-1.372 2.514-2.743 3.429l-1.372-3.2c.23-.229.23-.457.686-.686h0zm-5.486 0c.23 0 .458.229.458.457v.457l-1.372 3.2c-1.143-.685-2.057-1.828-2.743-3.428l3.657-.686zm2.743 1.371h.229l.228.229 1.6 2.971c-.228 0-.457.229-.685.229-1.143.229-2.515.229-3.657-.229l1.6-2.971c.457 0 .457-.229.685-.229h0z"
                    fill="#FFF"
                    stroke="#FFF"
                    stroke-width="0.25"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="StepWizard--title StepWizard--header"
          >
            pipelineSteps.kubernetesInfraStep.kubernetesConnector
          </span>
          <div
            class="StepWizard--navStep StepWizard--activeStep"
          >
            <span
              class="StepWizard--number"
            >
              1
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              overview
            </p>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              2
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              Feature Selection
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              3
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              Provide permissions
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              4
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              connectors.verifyConnection
            </p>
          </div>
        </div>
        <div
          class="StepWizard--stepDetails"
        >
           
          <div
            class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep overviewStep"
          >
            <div
              class="heading"
            >
              overview
            </div>
            <div
              class="infoSection"
            >
              connectors.ceK8.infoText
            </div>
            <div
              class="StyledProps--font StyledProps--main connectorForm formCont StyledProps--padding-small"
            >
              <div
                class="OverlaySpinner--overlaySpinner"
              >
                <form
                  class="FormikForm--main"
                >
                  <div>
                    <div
                      class="StyledProps--font StyledProps--main"
                      style="min-height: 300px;"
                    >
                      <div
                        class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-start"
                      >
                        <div
                          class="bp3-form-group selectConnector"
                          data-id="referenceConnector-0"
                        >
                          <label
                            class="bp3-label"
                            for="referenceConnector"
                          >
                            <span
                              class="Tooltip--acenter"
                              data-tooltip-id="overViewStepForm_referenceConnector"
                            >
                              connectors.ceK8.selectConnectorLabel
                            </span>
                             
                            <span
                              class="bp3-text-muted"
                            />
                          </label>
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="bp3-popover-wrapper Select--main bp3-fill"
                            >
                              <div
                                class="bp3-popover-target"
                              >
                                <div
                                  class="bp3-input-group"
                                >
                                  <input
                                    autocomplete="off"
                                    class="bp3-input"
                                    name="referenceConnector"
                                    placeholder="- Select -"
                                    style="padding-right: 0px;"
                                    type="text"
                                    value="rishabhk8s"
                                  />
                                  <span
                                    class="bp3-input-action"
                                  >
                                    <span
                                      class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                      icon="chevron-down"
                                    >
                                      <svg
                                        data-icon="chevron-down"
                                        height="14"
                                        viewBox="0 0 16 16"
                                        width="14"
                                      >
                                        <desc>
                                          chevron-down
                                        </desc>
                                        <path
                                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                          fill-rule="evenodd"
                                        />
                                      </svg>
                                    </span>
                                  </span>
                                </div>
                              </div>
                              <div
                                class="bp3-overlay bp3-overlay-inline"
                              >
                                <div
                                  class="bp3-transition-container bp3-popover-exit bp3-popover-exit-active"
                                  style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(NaNpx, NaNpx, 0);"
                                >
                                  <div
                                    class="bp3-popover bp3-minimal bp3-select-popover"
                                    style="transform-origin: center top;"
                                  >
                                    <div
                                      class="bp3-popover-content"
                                    >
                                      <div>
                                        <ul
                                          class="bp3-menu"
                                        >
                                          <li
                                            class="Select--menuItem Select--active"
                                          >
                                            <p
                                              class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                              style="--text-line-clamp: 1;"
                                            >
                                              rishabhk8s
                                            </p>
                                          </li>
                                        </ul>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <a
                          class="createNewConnCta"
                          href="/account/undefined/settings/resources/connectors"
                          target="_blank"
                        >
                          <button
                            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
                            type="button"
                          >
                            <span
                              class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                              icon="plus"
                            >
                              <svg
                                data-icon="plus"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <desc>
                                  plus
                                </desc>
                                <path
                                  d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                            <span
                              class="bp3-button-text"
                            >
                              connectors.ceK8.overview.createNewConnectorCta
                            </span>
                          </button>
                        </a>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main main formElm nameField"
                      >
                        <div
                          class="InputWithIdentifier--txtNameContainer TextInput--main"
                        >
                          <div
                            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                          >
                            <div
                              class="Text--withDocsTooltip"
                              data-tooltip-id="overViewStepForm_identifier"
                            >
                              <p
                                class="StyledProps--font StyledProps--main"
                              >
                                Id
                              </p>
                            </div>
                            <p
                              class="StyledProps--font StyledProps--main"
                            >
                              :
                            </p>
                            <span
                              class="bp3-popover-wrapper"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <div
                                  class="bp3-editable-text InputWithIdentifier--idValue"
                                  tabindex="0"
                                >
                                  <span
                                    class="bp3-editable-text-content"
                                    style="height: 1px; line-height: 1px; min-width: 0;"
                                  >
                                    rishabhk8sCostaccess
                                  </span>
                                </div>
                              </span>
                            </span>
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="Edit"
                              style="vertical-align: middle; cursor: pointer;"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 16 16"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <path
                                  clip-rule="evenodd"
                                  d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                  opacity="0.3"
                                />
                              </svg>
                            </span>
                          </div>
                          <div
                            class="bp3-form-group"
                            data-id="name-1"
                          >
                            <label
                              class="bp3-label"
                              for="name"
                            >
                              <span
                                class="Tooltip--acenter"
                                data-tooltip-id="overViewStepForm_name"
                              >
                                name
                              </span>
                               
                              <span
                                class="bp3-text-muted"
                              />
                            </label>
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="name"
                                  placeholder="common.namePlaceholder"
                                  type="text"
                                  value="rishabhk8s-Cost-access"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main"
                        >
                          <label
                            class="Label--main bp3-label descriptionLabel"
                          >
                            optionalField
                            <span
                              class="bp3-icon StyledProps--main editOpen"
                              data-icon="Edit"
                              data-name="edit"
                              data-testid="description-edit"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 16 16"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <path
                                  clip-rule="evenodd"
                                  d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                  opacity="0.3"
                                />
                              </svg>
                            </span>
                          </label>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main"
                        >
                          <label
                            class="Label--main bp3-label descriptionLabel"
                          >
                            optionalField
                            <span
                              class="bp3-icon StyledProps--main editOpen"
                              data-icon="Edit"
                              data-name="edit"
                              data-testid="tags-edit"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 16 16"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <path
                                  clip-rule="evenodd"
                                  d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                  opacity="0.3"
                                />
                              </svg>
                            </span>
                          </label>
                        </div>
                      </div>
                    </div>
                    <div
                      class="Layout--horizontal StyledProps--main"
                    >
                      <button
                        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
                        type="submit"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          <span>
                            saveAndContinue
                          </span>
                        </span>
                        <span
                          class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                          icon="chevron-right"
                        >
                          <svg
                            data-icon="chevron-right"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              chevron-right
                            </desc>
                            <path
                              d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
        <span
          class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
          data-icon="harness-with-color"
        >
          <svg
            height="346"
            viewBox="0 0 25 25"
            width="346"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m22.9736 8.18585-6.2654-6.30553c-.1103-.11108-1.0951-1.07656-2.5893-1.572117-2.1394-.717703-4.26188-.153793-5.98529 1.572117l-6.26542 6.30553c-.11036.11107-1.069701 1.10219-1.562105 2.60595-.713136 2.1531-.152815 4.2891 1.562105 6.0236l6.26542 6.3055c.11037.1111 1.09517 1.0766 2.58939 1.5807.6112.205 1.214.3076 1.8083.3076 1.5027 0 2.9459-.6408 4.1769-1.8797l6.2654-6.3056c.1104-.111 1.0698-1.1022 1.5622-2.6059.7131-2.1617.1528-4.2977-1.5622-6.03215zm-10.0688-4.4771c.7047.2136 1.231.70061 1.2735.73479l1.8508 1.86261-3.6082 3.63124-3.60811-3.63124 1.85921-1.87115c.5009-.49556 1.1971-1.03384 2.2328-.72625zm-9.21981 8.30485c.21225-.7092.69616-1.2389.73012-1.2816l1.85076-1.86262 3.60813 3.63122-3.60813 3.6313-1.85925-1.8712c-.4924-.5041-1.02726-1.2133-.72163-2.2471zm8.25201 9.2789c-.7046-.2136-1.231-.7006-1.2735-.7348l-1.85071-1.8626 3.60811-3.6313 3.6082 3.6313-1.8593 1.8711c-.5009.4956-1.2055 1.0339-2.2328.7263zm9.2198-8.3049c-.2122.7092-.6961 1.2389-.7301 1.2816l-1.8507 1.8627-3.6082-3.6313 3.6082-3.63122 1.8592 1.87112c.4924.5041 1.0273 1.2047.7216 2.2471z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create CE K8s Connector Wizard Proceed with following steps 2`] = `
<div>
  <div
    style="display: flex; max-height: 800px;"
  >
    <div
      style="width: 1159px; position: relative;"
    >
      <div
        class="StepWizard--main ceK8SConnector StepWizard--navBar"
      >
        <div
          class="StepWizard--navBarList"
        >
          <span
            class="StepWizard--header"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="app-kubernetes"
            >
              <svg
                height="40"
                viewBox="0 0 32 30"
                width="40"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fill-rule="nonzero"
                >
                  <path
                    d="M15.94.023c-.228 0-.457 0-.685.229L4.512 5.28c-.457.229-.915.686-1.143 1.372L.626 18.08c-.229.457 0 1.143.229 1.6l.228.229 7.314 9.143c.458.457.915.685 1.6.685h11.886c.686 0 1.143-.228 1.6-.685l7.314-9.143c.458-.457.458-1.143.458-1.6L28.512 6.88c-.229-.685-.457-1.143-1.143-1.371L16.626.48c0-.228-.457-.457-.686-.457z"
                    fill="#326CE5"
                  />
                  <path
                    d="M15.94 3.909c-.457 0-.685.228-.685.686v2.057c0 .228-.229.228-.229.228v.229c-.457 0-.686 0-1.143.228-1.6.458-3.2 1.143-4.114 2.286l-.229-.228h-.457c-.228-.23-.457-.458-.914-.686l-.457-.457h-.229c-.228 0-.228-.229-.457-.229s-.457 0-.457.229c-.229.228-.229.685.228.914h.23c.228.229.456.229.456.229.457.228.686.457.914.685 0 0 .23.229.23.457l.228.229c-1.143 1.6-1.6 3.657-1.372 5.714h-.228l-.229.229c-.229 0-.686.228-1.143.228H4.97c-.457 0-.686.458-.457.686 0 .229.457.457.914.457h.229c.228 0 .457-.228.685-.228.457-.229.686-.229 1.143-.229.229 0 .229 0 .457.229h.229c.686 2.057 2.057 3.657 3.657 4.571l-.229.229v.457c-.228.228-.228.686-.685 1.143-.229.228-.229.228-.229.457v.228c-.228.458 0 .686.229.915.228.228.685 0 .914-.457v-.23c0-.228.229-.456.229-.685.228-.457.228-.914.457-1.143 0 0 .228 0 .228-.228l.229-.229c1.371.457 3.2.686 4.8.457.457 0 .686-.228 1.143-.228l.228.228s.229 0 .229.229c.228.229.228.686.457 1.143 0 .228 0 .457.229.686v.228c.228.457.457.457.914.457.228-.228.457-.457.228-.914v-.229c0-.228-.228-.228-.228-.457-.229-.457-.457-.685-.457-.914v-.686c1.828-1.143 2.971-2.743 3.657-4.571h.228s.23-.229.458-.229.685.229 1.142.229c.23 0 .458.228.686.228h.229c.457 0 .685-.228.914-.457 0-.228-.229-.685-.457-.685h-.914c-.458 0-.915 0-1.143-.23-.229 0-.229-.228-.229-.228h-.228c.228-.914 0-2.057-.229-2.971-.229-.914-.686-2.057-1.143-2.743l.229-.228c0-.23 0-.23.228-.458.229-.228.457-.457.915-.685.228 0 .457-.229.457-.229h.228c.229-.228.457-.686.229-.914-.229-.229-.686-.229-.914 0h-.229l-.457.457c-.229.229-.686.686-.914.686h-.458l-.228.228a8.778 8.778 0 00-5.257-2.514v-.229l-.229-.228V5.966v-.914c-.457-.686-.686-1.143-1.143-1.143zm-.685 5.028l-.229 3.429a.492.492 0 01-.457.457h-.229l-2.743-2.057c.915-.914 1.83-1.371 3.2-1.829h.458zm1.6 0c1.371.229 2.742.915 3.885 1.829l-2.743 1.829c-.228.228-.685.228-.685 0l-.229-.23-.228-3.428zm-6.4 3.2l2.514 2.286c.228.229.228.457 0 .686l-.229.228-3.2.915c-.228-1.6 0-2.972.915-4.115zm11.2 0c.457.686.685 1.372.914 2.058.228.685.228 1.37.228 2.057l-3.2-.915c-.228 0-.457-.457-.457-.685 0-.229 0-.229.229-.229l2.286-2.286zm-6.172 2.286h.914l.686.686-.228.914-.915.457-.914-.457-.229-.914.686-.686zm3.2 2.743c.229 0 .229 0 0 0l3.429.457c-.457 1.372-1.372 2.514-2.743 3.429l-1.372-3.2c.23-.229.23-.457.686-.686h0zm-5.486 0c.23 0 .458.229.458.457v.457l-1.372 3.2c-1.143-.685-2.057-1.828-2.743-3.428l3.657-.686zm2.743 1.371h.229l.228.229 1.6 2.971c-.228 0-.457.229-.685.229-1.143.229-2.515.229-3.657-.229l1.6-2.971c.457 0 .457-.229.685-.229h0z"
                    fill="#FFF"
                    stroke="#FFF"
                    stroke-width="0.25"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="StepWizard--title StepWizard--header"
          >
            pipelineSteps.kubernetesInfraStep.kubernetesConnector
          </span>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              overview
            </p>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--activeStep"
          >
            <span
              class="StepWizard--number"
            >
              2
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              Feature Selection
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              3
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              Provide permissions
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              4
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              connectors.verifyConnection
            </p>
          </div>
        </div>
        <div
          class="StepWizard--stepDetails"
        >
           
          <div
            class="Layout--vertical StyledProps--main featureSelectionCont"
          >
            <h2
              class="StyledProps--font StyledProps--font-h2 StyledProps--main header"
              level="2"
            >
              connectors.ceK8.chooseRequirements.heading
            </h2>
            <div
              style="padding: 5px 5px 20px 5px;"
            >
              <p
                class="StyledProps--font StyledProps--main"
              >
                 
                connectors.ceK8.chooseRequirements.subheading
              </p>
              connectors.ceK8.chooseRequirements.description
            </div>
            <div
              style="flex: 1;"
            >
              <div
                class="grid"
              >
                <div
                  class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--selected Card--interactive"
                  data-index="0"
                  tabindex="0"
                >
                  <span
                    class="Card--corner"
                  >
                    <span
                      class="Card--badge"
                    />
                    <span
                      class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                      data-icon="main-tick"
                    >
                      <svg
                        height="10"
                        viewBox="0 0 11 8"
                        width="10"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M9.219.894c.356-.38.982-.413 1.398-.072.391.32.457.857.167 1.236l-.06.07-5.138 5.486c-.362.386-.993.41-1.403.068l-.07-.064-3.2-3.214A.88.88 0 01.95 3.098a1.045 1.045 0 011.328-.003l.074.067 2.443 2.454L9.22.894z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </span>
                  <div>
                    <div
                      style="display: flex; padding-bottom: 7px;"
                    >
                      <span
                        class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary5"
                        data-icon="main-main-zoom_in"
                        style="padding-right: 10px;"
                      >
                        <svg
                          enable-background="new 0 0 14 14"
                          height="32"
                          viewBox="0 0 14 14"
                          width="32"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m13.7 12.2-3.5-3.5c.6-.9 1-2 1-3.2 0-3-2.5-5.5-5.6-5.5s-5.6 2.5-5.6 5.6 2.5 5.6 5.6 5.6c1.2 0 2.2-.4 3.2-1l3.5 3.5c.2.2.5.3.7.3.6 0 1.1-.5 1.1-1.1-.1-.2-.2-.5-.4-.7zm-8.1-2.4c-2.3 0-4.2-1.9-4.2-4.2s1.9-4.2 4.2-4.2 4.2 1.9 4.2 4.2-1.9 4.2-4.2 4.2zm2.1-4.9h-1.4v-1.4c0-.4-.3-.7-.7-.7s-.7.3-.7.7v1.4h-1.4c-.4 0-.7.3-.7.7s.3.7.7.7h1.4v1.4c0 .4.3.7.7.7s.7-.3.7-.7v-1.4h1.4c.4 0 .7-.3.7-.7s-.3-.7-.7-.7z"
                            fill="#4d5969"
                          />
                        </svg>
                      </span>
                      <p>
                        <div
                          style="font-size: 8px; font-family: inter;"
                        >
                          connectors.ceK8.chooseRequirements.visibility.heading
                        </div>
                         
                        <div
                          style="font-size: 14px; font-family: inter;"
                        >
                          connectors.ceK8.chooseRequirements.visibility.subheading
                        </div>
                      </p>
                    </div>
                    <p>
                      <div>
                        connectors.ceK8.chooseRequirements.visibility.description
                      </div>
                    </p>
                  </div>
                </div>
                <div
                  class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--interactive"
                  data-index="1"
                  tabindex="0"
                >
                  <div>
                    <div
                      style="display: flex; padding-bottom: 7px;"
                    >
                      <span
                        class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary5"
                        data-icon="gear"
                        style="padding-right: 10px;"
                      >
                        <svg
                          height="32"
                          viewBox="0 0 16 16"
                          width="32"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M2.68682 3.48795C2.59082 3.61595 2.43082 3.66395 2.28682 3.64795L1.53482 3.50395C1.35882 3.47195 1.16682 3.56795 1.10282 3.74395L0.926819 4.22395L0.750818 4.70395C0.686818 4.87995 0.750819 5.08795 0.926819 5.16795L1.58282 5.55195C1.71082 5.63195 1.79082 5.77595 1.79082 5.93595C1.77482 6.15995 1.79082 6.38395 1.80682 6.60795C1.82282 6.76795 1.75882 6.91195 1.63082 7.00795L1.00682 7.43995C0.846819 7.55195 0.798819 7.74395 0.878819 7.91995L1.08682 8.38395L1.29482 8.84795C1.37482 9.02395 1.56682 9.10395 1.74282 9.05595L2.47882 8.86395C2.62282 8.81595 2.78282 8.87995 2.89482 8.99195C3.03882 9.15195 3.21482 9.31195 3.39082 9.45595C3.51882 9.55195 3.56682 9.71195 3.55082 9.85595L3.40682 10.608C3.37482 10.8 3.47082 10.976 3.64682 11.04L4.12682 11.216L4.60682 11.392C4.78282 11.456 4.99082 11.392 5.07082 11.216L5.45482 10.56C5.53482 10.416 5.67882 10.352 5.83882 10.352C6.04682 10.368 6.27082 10.352 6.47882 10.336C6.63882 10.32 6.78282 10.384 6.87882 10.512L7.31082 11.152C7.42282 11.312 7.61482 11.36 7.79082 11.28L8.25482 11.072L8.71882 10.864C8.89482 10.784 8.97482 10.592 8.92682 10.416L8.73482 9.69595C8.68682 9.53595 8.75082 9.37595 8.86282 9.27995C9.02282 9.13595 9.18282 8.95995 9.32682 8.78395C9.42282 8.65595 9.58282 8.60795 9.72682 8.62395L10.4788 8.76795C10.6708 8.79995 10.8468 8.70395 10.9108 8.52795L11.0868 8.04795L11.2628 7.56795C11.3268 7.39195 11.2628 7.18395 11.0868 7.10395L10.4308 6.73595C10.2868 6.65595 10.2228 6.51195 10.2228 6.35195C10.2388 6.12795 10.2228 5.90395 10.2068 5.67995C10.1908 5.51995 10.2548 5.37595 10.3828 5.27995L11.0228 4.84795C11.1828 4.73595 11.2308 4.54395 11.1508 4.36795L10.9428 3.90395L10.7348 3.43995C10.6548 3.26395 10.4628 3.18395 10.2868 3.23195L9.56682 3.43995C9.40682 3.48795 9.24682 3.43995 9.15082 3.31195C9.00682 3.15195 8.84682 2.99195 8.67082 2.84795C8.54282 2.75195 8.49482 2.59195 8.51082 2.44795L8.65482 1.69595C8.68682 1.50395 8.59082 1.32795 8.41482 1.26395L7.93482 1.08795L7.45482 0.911951C7.27882 0.847951 7.07082 0.911952 6.99082 1.08795L6.62282 1.72795C6.54282 1.87195 6.39882 1.93595 6.23882 1.93595C5.99882 1.91995 5.77482 1.93595 5.53482 1.95195C5.37482 1.96795 5.23082 1.90395 5.13482 1.77595L4.70282 1.15195C4.59082 0.991951 4.39882 0.943952 4.22282 1.02395L3.75882 1.23195L3.29482 1.43995C3.11882 1.51995 3.03882 1.71195 3.08682 1.88795L3.27882 2.62395C3.32682 2.76795 3.26282 2.92795 3.15082 3.03995C2.97482 3.13595 2.83082 3.31195 2.68682 3.48795ZM3.88682 5.35995C4.30282 4.20795 5.56682 3.59995 6.73482 3.99995C7.88682 4.41595 8.49482 5.67995 8.09482 6.84795C7.69482 8.01595 6.41482 8.60795 5.24682 8.20795C4.07882 7.79195 3.47082 6.51195 3.88682 5.35995ZM14.5908 10.176C14.6548 10.08 14.6388 9.95195 14.5748 9.87195L14.3668 9.66395L14.1588 9.45595C14.0788 9.37595 13.9508 9.35995 13.8548 9.42395L13.4868 9.67995C13.4068 9.72795 13.3108 9.74395 13.2308 9.69595C13.1188 9.63195 12.9908 9.58395 12.8628 9.53595C12.7828 9.50395 12.7028 9.42395 12.7028 9.34395L12.6228 8.89595C12.6068 8.78395 12.5108 8.70395 12.3988 8.70395H12.0948H11.7908C11.6788 8.70395 11.5828 8.78395 11.5668 8.89595L11.4868 9.34395C11.4708 9.43995 11.4068 9.51995 11.3108 9.53595C11.1828 9.56795 11.0548 9.63195 10.9428 9.67995C10.8628 9.72795 10.7668 9.71195 10.6868 9.66395L10.3188 9.39195C10.2228 9.32795 10.0948 9.34395 10.0148 9.40795L9.80682 9.61595L9.59882 9.82395C9.51882 9.90395 9.50282 10.032 9.56682 10.128L9.82282 10.496C9.87082 10.576 9.88682 10.672 9.83882 10.752C9.77482 10.88 9.71082 11.008 9.67882 11.136C9.64682 11.232 9.58282 11.296 9.48682 11.312L9.03882 11.392C8.92682 11.408 8.84682 11.504 8.84682 11.616V11.92V12.224C8.84682 12.336 8.92682 12.432 9.03882 12.448L9.48682 12.528C9.58282 12.544 9.64682 12.608 9.67882 12.704C9.72682 12.832 9.77482 12.96 9.83882 13.072C9.88682 13.152 9.87082 13.248 9.82282 13.328L9.55082 13.696C9.48682 13.792 9.50282 13.904 9.56682 13.984L9.77482 14.192L9.98282 14.4C10.0628 14.48 10.1908 14.496 10.2868 14.432L10.6548 14.176C10.7348 14.128 10.8308 14.112 10.9108 14.16C11.0388 14.224 11.1508 14.272 11.2788 14.32C11.3748 14.352 11.4388 14.416 11.4548 14.512L11.5348 14.96C11.5508 15.072 11.6468 15.152 11.7588 15.152H12.0628H12.3668C12.4788 15.152 12.5748 15.072 12.5908 14.96L12.6708 14.512C12.6868 14.416 12.7508 14.352 12.8468 14.32C12.9748 14.272 13.1028 14.224 13.2148 14.16C13.2948 14.112 13.3908 14.128 13.4708 14.176L13.8388 14.448C13.9348 14.512 14.0628 14.496 14.1428 14.432L14.3508 14.224L14.5588 14.016C14.6388 13.936 14.6548 13.808 14.5908 13.712L14.3348 13.344C14.2868 13.264 14.2708 13.168 14.3188 13.088C14.3828 12.976 14.4308 12.848 14.4628 12.736C14.4948 12.64 14.5748 12.576 14.6548 12.56L15.1028 12.48C15.2148 12.464 15.2948 12.368 15.2948 12.256V11.952V11.648C15.2948 11.536 15.2148 11.44 15.1028 11.424L14.6548 11.344C14.5588 11.328 14.4948 11.264 14.4628 11.168C14.4308 11.04 14.3668 10.912 14.3188 10.8C14.2708 10.72 14.2868 10.624 14.3348 10.544L14.5908 10.176ZM13.0068 12.864C12.4948 13.392 11.6468 13.392 11.1348 12.88C10.6068 12.368 10.6068 11.52 11.1188 11.008C11.6308 10.496 12.4788 10.48 12.9908 10.992C13.5028 11.504 13.5188 12.336 13.0068 12.864Z"
                            fill="#30AAAF"
                          />
                        </svg>
                      </span>
                      <p>
                        <div
                          style="font-size: 8px; font-family: inter;"
                        >
                          connectors.ceK8.chooseRequirements.optimization.heading
                        </div>
                         
                        <div
                          style="font-size: 14px; font-family: inter;"
                        >
                          connectors.ceK8.chooseRequirements.optimization.subheading
                        </div>
                      </p>
                    </div>
                    <p>
                      <div>
                        connectors.ceK8.chooseRequirements.optimization.description
                      </div>
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main buttonPanel"
              >
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                    icon="chevron-left"
                  >
                    <svg
                      data-icon="chevron-left"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-left
                      </desc>
                      <path
                        d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    previous
                  </span>
                </button>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    continue
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                    icon="chevron-right"
                  >
                    <svg
                      data-icon="chevron-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-right
                      </desc>
                      <path
                        d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <span
          class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
          data-icon="harness-with-color"
        >
          <svg
            height="346"
            viewBox="0 0 25 25"
            width="346"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m22.9736 8.18585-6.2654-6.30553c-.1103-.11108-1.0951-1.07656-2.5893-1.572117-2.1394-.717703-4.26188-.153793-5.98529 1.572117l-6.26542 6.30553c-.11036.11107-1.069701 1.10219-1.562105 2.60595-.713136 2.1531-.152815 4.2891 1.562105 6.0236l6.26542 6.3055c.11037.1111 1.09517 1.0766 2.58939 1.5807.6112.205 1.214.3076 1.8083.3076 1.5027 0 2.9459-.6408 4.1769-1.8797l6.2654-6.3056c.1104-.111 1.0698-1.1022 1.5622-2.6059.7131-2.1617.1528-4.2977-1.5622-6.03215zm-10.0688-4.4771c.7047.2136 1.231.70061 1.2735.73479l1.8508 1.86261-3.6082 3.63124-3.60811-3.63124 1.85921-1.87115c.5009-.49556 1.1971-1.03384 2.2328-.72625zm-9.21981 8.30485c.21225-.7092.69616-1.2389.73012-1.2816l1.85076-1.86262 3.60813 3.63122-3.60813 3.6313-1.85925-1.8712c-.4924-.5041-1.02726-1.2133-.72163-2.2471zm8.25201 9.2789c-.7046-.2136-1.231-.7006-1.2735-.7348l-1.85071-1.8626 3.60811-3.6313 3.6082 3.6313-1.8593 1.8711c-.5009.4956-1.2055 1.0339-2.2328.7263zm9.2198-8.3049c-.2122.7092-.6961 1.2389-.7301 1.2816l-1.8507 1.8627-3.6082-3.6313 3.6082-3.63122 1.8592 1.87112c.4924.5041 1.0273 1.2047.7216 2.2471z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create CE K8s Connector Wizard Proceed with following steps 3`] = `
<div>
  <div
    style="display: flex; max-height: 800px;"
  >
    <div
      style="width: 1159px; position: relative;"
    >
      <div
        class="StepWizard--main ceK8SConnector StepWizard--navBar"
      >
        <div
          class="StepWizard--navBarList"
        >
          <span
            class="StepWizard--header"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="app-kubernetes"
            >
              <svg
                height="40"
                viewBox="0 0 32 30"
                width="40"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fill-rule="nonzero"
                >
                  <path
                    d="M15.94.023c-.228 0-.457 0-.685.229L4.512 5.28c-.457.229-.915.686-1.143 1.372L.626 18.08c-.229.457 0 1.143.229 1.6l.228.229 7.314 9.143c.458.457.915.685 1.6.685h11.886c.686 0 1.143-.228 1.6-.685l7.314-9.143c.458-.457.458-1.143.458-1.6L28.512 6.88c-.229-.685-.457-1.143-1.143-1.371L16.626.48c0-.228-.457-.457-.686-.457z"
                    fill="#326CE5"
                  />
                  <path
                    d="M15.94 3.909c-.457 0-.685.228-.685.686v2.057c0 .228-.229.228-.229.228v.229c-.457 0-.686 0-1.143.228-1.6.458-3.2 1.143-4.114 2.286l-.229-.228h-.457c-.228-.23-.457-.458-.914-.686l-.457-.457h-.229c-.228 0-.228-.229-.457-.229s-.457 0-.457.229c-.229.228-.229.685.228.914h.23c.228.229.456.229.456.229.457.228.686.457.914.685 0 0 .23.229.23.457l.228.229c-1.143 1.6-1.6 3.657-1.372 5.714h-.228l-.229.229c-.229 0-.686.228-1.143.228H4.97c-.457 0-.686.458-.457.686 0 .229.457.457.914.457h.229c.228 0 .457-.228.685-.228.457-.229.686-.229 1.143-.229.229 0 .229 0 .457.229h.229c.686 2.057 2.057 3.657 3.657 4.571l-.229.229v.457c-.228.228-.228.686-.685 1.143-.229.228-.229.228-.229.457v.228c-.228.458 0 .686.229.915.228.228.685 0 .914-.457v-.23c0-.228.229-.456.229-.685.228-.457.228-.914.457-1.143 0 0 .228 0 .228-.228l.229-.229c1.371.457 3.2.686 4.8.457.457 0 .686-.228 1.143-.228l.228.228s.229 0 .229.229c.228.229.228.686.457 1.143 0 .228 0 .457.229.686v.228c.228.457.457.457.914.457.228-.228.457-.457.228-.914v-.229c0-.228-.228-.228-.228-.457-.229-.457-.457-.685-.457-.914v-.686c1.828-1.143 2.971-2.743 3.657-4.571h.228s.23-.229.458-.229.685.229 1.142.229c.23 0 .458.228.686.228h.229c.457 0 .685-.228.914-.457 0-.228-.229-.685-.457-.685h-.914c-.458 0-.915 0-1.143-.23-.229 0-.229-.228-.229-.228h-.228c.228-.914 0-2.057-.229-2.971-.229-.914-.686-2.057-1.143-2.743l.229-.228c0-.23 0-.23.228-.458.229-.228.457-.457.915-.685.228 0 .457-.229.457-.229h.228c.229-.228.457-.686.229-.914-.229-.229-.686-.229-.914 0h-.229l-.457.457c-.229.229-.686.686-.914.686h-.458l-.228.228a8.778 8.778 0 00-5.257-2.514v-.229l-.229-.228V5.966v-.914c-.457-.686-.686-1.143-1.143-1.143zm-.685 5.028l-.229 3.429a.492.492 0 01-.457.457h-.229l-2.743-2.057c.915-.914 1.83-1.371 3.2-1.829h.458zm1.6 0c1.371.229 2.742.915 3.885 1.829l-2.743 1.829c-.228.228-.685.228-.685 0l-.229-.23-.228-3.428zm-6.4 3.2l2.514 2.286c.228.229.228.457 0 .686l-.229.228-3.2.915c-.228-1.6 0-2.972.915-4.115zm11.2 0c.457.686.685 1.372.914 2.058.228.685.228 1.37.228 2.057l-3.2-.915c-.228 0-.457-.457-.457-.685 0-.229 0-.229.229-.229l2.286-2.286zm-6.172 2.286h.914l.686.686-.228.914-.915.457-.914-.457-.229-.914.686-.686zm3.2 2.743c.229 0 .229 0 0 0l3.429.457c-.457 1.372-1.372 2.514-2.743 3.429l-1.372-3.2c.23-.229.23-.457.686-.686h0zm-5.486 0c.23 0 .458.229.458.457v.457l-1.372 3.2c-1.143-.685-2.057-1.828-2.743-3.428l3.657-.686zm2.743 1.371h.229l.228.229 1.6 2.971c-.228 0-.457.229-.685.229-1.143.229-2.515.229-3.657-.229l1.6-2.971c.457 0 .457-.229.685-.229h0z"
                    fill="#FFF"
                    stroke="#FFF"
                    stroke-width="0.25"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="StepWizard--title StepWizard--header"
          >
            pipelineSteps.kubernetesInfraStep.kubernetesConnector
          </span>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              overview
            </p>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              Feature Selection
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              Secret Creation
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--activeStep"
          >
            <span
              class="StepWizard--number"
            >
              4
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              Provide permissions
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              5
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              connectors.verifyConnection
            </p>
          </div>
        </div>
        <div
          class="StepWizard--stepDetails"
        >
           
          <div
            class="Layout--vertical Layout--layout-spacing-xlarge StyledProps--main providePermissionContainer"
          >
            <h2
              class="StyledProps--font StyledProps--font-h2 StyledProps--main heading"
              level="2"
            >
              connectors.ceK8.providePermissionsStep.heading
            </h2>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7"
              style="display: flex; align-items: center;"
            >
              <span
                class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-primary7"
                data-icon="info"
              >
                <svg
                  height="16"
                  viewBox="0 0 12 12"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <defs />
                  <path
                    clip-rule="evenodd"
                    d="M0 6c0 3.31371 2.68629 6 6 6s6-2.68629 6-6-2.68629-6-6-6-6 2.68629-6 6zm.75 0c0 2.8995 2.35051 5.25 5.25 5.25 2.8995 0 5.25-2.3505 5.25-5.25C11.25 3.10051 8.8995.75 6 .75 3.10051.75.75 3.10051.75 6zm4.2063 3.104v.646h2.6814v-.646l-.8357-.14355V4.20264H4.9563v.65112l.83569.14355v3.96314L4.9563 9.104zM6.802 1.75195v1.03052H5.79199V1.75195H6.802z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              connectors.ceK8.providePermissionsStep.info
              <a
                href="https://ngdocs.harness.io/article/ltt65r6k39-set-up-cost-visibility-for-kubernetes#prerequisites"
                rel="noreferrer"
                target="_blank"
              >
                connectors.readMore
              </a>
            </p>
            <p
              class="StyledProps--font StyledProps--main"
            >
              connectors.ceK8.providePermissionsStep.downloadYamlText
              <span
                class="previewLink"
              >
                here
              </span>
              .
            </p>
            <div>
              <p
                class="StyledProps--font StyledProps--main"
              >
                connectors.ceK8.providePermissionsStep.fileDescription.heading
              </p>
              <ul>
                <li>
                  connectors.ceK8.providePermissionsStep.fileDescription.info1
                </li>
                <li>
                  connectors.ceK8.providePermissionsStep.fileDescription.info2
                </li>
                <li>
                  connectors.ceK8.providePermissionsStep.fileDescription.info3
                </li>
                <li>
                  connectors.ceK8.providePermissionsStep.fileDescription.info4
                </li>
              </ul>
              <div
                class="Layout--horizontal StyledProps--main successTextContainer"
              >
                <span
                  class="bp3-icon bp3-icon-tick StyledProps--main"
                  icon="tick"
                >
                  <svg
                    data-icon="tick"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      tick
                    </desc>
                    <path
                      d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span>
                  connectors.ceK8.providePermissionsStep.downloadComplete
                </span>
              </div>
              <div
                class="commandSection"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  connectors.ceK8.providePermissionsStep.applyDelegateText
                </p>
                <div
                  class="StyledProps--font StyledProps--main copyCommand StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-flex-start"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    kubectl apply -f ccm-kubernetes.yaml
                  </p>
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="step-group"
                    title="copy"
                  >
                    <svg
                      height="16"
                      id="Layer_1"
                      viewBox="0 0 21 20"
                      width="16"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <style>
                        .st0{fill:#fff !important}
                      </style>
                      <path
                        class="st0"
                        d="M1 .8h13v13.3H1z"
                      />
                      <path
                        d="M14 1H1v13h13V1zm1-1v15H0V0h15z"
                      />
                      <path
                        class="st0"
                        d="M7 6h13v13H7z"
                      />
                      <path
                        class="st1"
                        d="M20 6H7v13h13V6zm1-1v15H6V5h15z"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main successTextContainer"
                >
                  <span
                    class="bp3-icon bp3-icon-tick StyledProps--main"
                    icon="tick"
                  >
                    <svg
                      data-icon="tick"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        tick
                      </desc>
                      <path
                        d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span>
                    connectors.ceK8.providePermissionsStep.successfulCommandExec
                  </span>
                </div>
              </div>
            </div>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main submitBtn StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                continue
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                icon="chevron-right"
              >
                <svg
                  data-icon="chevron-right"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    chevron-right
                  </desc>
                  <path
                    d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <span
          class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
          data-icon="harness-with-color"
        >
          <svg
            height="346"
            viewBox="0 0 25 25"
            width="346"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m22.9736 8.18585-6.2654-6.30553c-.1103-.11108-1.0951-1.07656-2.5893-1.572117-2.1394-.717703-4.26188-.153793-5.98529 1.572117l-6.26542 6.30553c-.11036.11107-1.069701 1.10219-1.562105 2.60595-.713136 2.1531-.152815 4.2891 1.562105 6.0236l6.26542 6.3055c.11037.1111 1.09517 1.0766 2.58939 1.5807.6112.205 1.214.3076 1.8083.3076 1.5027 0 2.9459-.6408 4.1769-1.8797l6.2654-6.3056c.1104-.111 1.0698-1.1022 1.5622-2.6059.7131-2.1617.1528-4.2977-1.5622-6.03215zm-10.0688-4.4771c.7047.2136 1.231.70061 1.2735.73479l1.8508 1.86261-3.6082 3.63124-3.60811-3.63124 1.85921-1.87115c.5009-.49556 1.1971-1.03384 2.2328-.72625zm-9.21981 8.30485c.21225-.7092.69616-1.2389.73012-1.2816l1.85076-1.86262 3.60813 3.63122-3.60813 3.6313-1.85925-1.8712c-.4924-.5041-1.02726-1.2133-.72163-2.2471zm8.25201 9.2789c-.7046-.2136-1.231-.7006-1.2735-.7348l-1.85071-1.8626 3.60811-3.6313 3.6082 3.6313-1.8593 1.8711c-.5009.4956-1.2055 1.0339-2.2328.7263zm9.2198-8.3049c-.2122.7092-.6961 1.2389-.7301 1.2816l-1.8507 1.8627-3.6082-3.6313 3.6082-3.63122 1.8592 1.87112c.4924.5041 1.0273 1.2047.7216 2.2471z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create CE K8s Connector Wizard Step One 1`] = `
<div>
  <div
    style="display: flex; max-height: 800px;"
  >
    <div
      style="width: 1159px; position: relative;"
    >
      <div
        class="StepWizard--main ceK8SConnector StepWizard--navBar"
      >
        <div
          class="StepWizard--navBarList"
        >
          <span
            class="StepWizard--header"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="app-kubernetes"
            >
              <svg
                height="40"
                viewBox="0 0 32 30"
                width="40"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fill-rule="nonzero"
                >
                  <path
                    d="M15.94.023c-.228 0-.457 0-.685.229L4.512 5.28c-.457.229-.915.686-1.143 1.372L.626 18.08c-.229.457 0 1.143.229 1.6l.228.229 7.314 9.143c.458.457.915.685 1.6.685h11.886c.686 0 1.143-.228 1.6-.685l7.314-9.143c.458-.457.458-1.143.458-1.6L28.512 6.88c-.229-.685-.457-1.143-1.143-1.371L16.626.48c0-.228-.457-.457-.686-.457z"
                    fill="#326CE5"
                  />
                  <path
                    d="M15.94 3.909c-.457 0-.685.228-.685.686v2.057c0 .228-.229.228-.229.228v.229c-.457 0-.686 0-1.143.228-1.6.458-3.2 1.143-4.114 2.286l-.229-.228h-.457c-.228-.23-.457-.458-.914-.686l-.457-.457h-.229c-.228 0-.228-.229-.457-.229s-.457 0-.457.229c-.229.228-.229.685.228.914h.23c.228.229.456.229.456.229.457.228.686.457.914.685 0 0 .23.229.23.457l.228.229c-1.143 1.6-1.6 3.657-1.372 5.714h-.228l-.229.229c-.229 0-.686.228-1.143.228H4.97c-.457 0-.686.458-.457.686 0 .229.457.457.914.457h.229c.228 0 .457-.228.685-.228.457-.229.686-.229 1.143-.229.229 0 .229 0 .457.229h.229c.686 2.057 2.057 3.657 3.657 4.571l-.229.229v.457c-.228.228-.228.686-.685 1.143-.229.228-.229.228-.229.457v.228c-.228.458 0 .686.229.915.228.228.685 0 .914-.457v-.23c0-.228.229-.456.229-.685.228-.457.228-.914.457-1.143 0 0 .228 0 .228-.228l.229-.229c1.371.457 3.2.686 4.8.457.457 0 .686-.228 1.143-.228l.228.228s.229 0 .229.229c.228.229.228.686.457 1.143 0 .228 0 .457.229.686v.228c.228.457.457.457.914.457.228-.228.457-.457.228-.914v-.229c0-.228-.228-.228-.228-.457-.229-.457-.457-.685-.457-.914v-.686c1.828-1.143 2.971-2.743 3.657-4.571h.228s.23-.229.458-.229.685.229 1.142.229c.23 0 .458.228.686.228h.229c.457 0 .685-.228.914-.457 0-.228-.229-.685-.457-.685h-.914c-.458 0-.915 0-1.143-.23-.229 0-.229-.228-.229-.228h-.228c.228-.914 0-2.057-.229-2.971-.229-.914-.686-2.057-1.143-2.743l.229-.228c0-.23 0-.23.228-.458.229-.228.457-.457.915-.685.228 0 .457-.229.457-.229h.228c.229-.228.457-.686.229-.914-.229-.229-.686-.229-.914 0h-.229l-.457.457c-.229.229-.686.686-.914.686h-.458l-.228.228a8.778 8.778 0 00-5.257-2.514v-.229l-.229-.228V5.966v-.914c-.457-.686-.686-1.143-1.143-1.143zm-.685 5.028l-.229 3.429a.492.492 0 01-.457.457h-.229l-2.743-2.057c.915-.914 1.83-1.371 3.2-1.829h.458zm1.6 0c1.371.229 2.742.915 3.885 1.829l-2.743 1.829c-.228.228-.685.228-.685 0l-.229-.23-.228-3.428zm-6.4 3.2l2.514 2.286c.228.229.228.457 0 .686l-.229.228-3.2.915c-.228-1.6 0-2.972.915-4.115zm11.2 0c.457.686.685 1.372.914 2.058.228.685.228 1.37.228 2.057l-3.2-.915c-.228 0-.457-.457-.457-.685 0-.229 0-.229.229-.229l2.286-2.286zm-6.172 2.286h.914l.686.686-.228.914-.915.457-.914-.457-.229-.914.686-.686zm3.2 2.743c.229 0 .229 0 0 0l3.429.457c-.457 1.372-1.372 2.514-2.743 3.429l-1.372-3.2c.23-.229.23-.457.686-.686h0zm-5.486 0c.23 0 .458.229.458.457v.457l-1.372 3.2c-1.143-.685-2.057-1.828-2.743-3.428l3.657-.686zm2.743 1.371h.229l.228.229 1.6 2.971c-.228 0-.457.229-.685.229-1.143.229-2.515.229-3.657-.229l1.6-2.971c.457 0 .457-.229.685-.229h0z"
                    fill="#FFF"
                    stroke="#FFF"
                    stroke-width="0.25"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="StepWizard--title StepWizard--header"
          >
            pipelineSteps.kubernetesInfraStep.kubernetesConnector
          </span>
          <div
            class="StepWizard--navStep StepWizard--activeStep"
          >
            <span
              class="StepWizard--number"
            >
              1
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              overview
            </p>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              2
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              Feature Selection
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              3
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              Provide permissions
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              4
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              connectors.verifyConnection
            </p>
          </div>
        </div>
        <div
          class="StepWizard--stepDetails"
        >
           
          <div
            class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep overviewStep"
          >
            <div
              class="heading"
            >
              overview
            </div>
            <div
              class="infoSection"
            >
              connectors.ceK8.infoText
            </div>
            <div
              class="StyledProps--font StyledProps--main connectorForm formCont StyledProps--padding-small"
            >
              <div
                class="OverlaySpinner--overlaySpinner"
              >
                <form
                  class="FormikForm--main"
                >
                  <div>
                    <div
                      class="StyledProps--font StyledProps--main"
                      style="min-height: 300px;"
                    >
                      <div
                        class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-start"
                      >
                        <div
                          class="bp3-form-group bp3-intent-danger selectConnector"
                          data-id="referenceConnector-0"
                        >
                          <label
                            class="bp3-label"
                            for="referenceConnector"
                          >
                            <span
                              class="Tooltip--acenter"
                              data-tooltip-id="overViewStepForm_referenceConnector"
                            >
                              connectors.ceK8.selectConnectorLabel
                            </span>
                             
                            <span
                              class="bp3-text-muted"
                            />
                          </label>
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="bp3-popover-wrapper Select--main bp3-fill"
                            >
                              <div
                                class="bp3-popover-target"
                              >
                                <div
                                  class="bp3-input-group bp3-intent-danger"
                                >
                                  <input
                                    autocomplete="off"
                                    class="bp3-input"
                                    name="referenceConnector"
                                    placeholder="- Select -"
                                    style="padding-right: 0px;"
                                    type="text"
                                    value=""
                                  />
                                  <span
                                    class="bp3-input-action"
                                  >
                                    <span
                                      class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                      icon="chevron-down"
                                    >
                                      <svg
                                        data-icon="chevron-down"
                                        height="14"
                                        viewBox="0 0 16 16"
                                        width="14"
                                      >
                                        <desc>
                                          chevron-down
                                        </desc>
                                        <path
                                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                          fill-rule="evenodd"
                                        />
                                      </svg>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                            <div
                              class="bp3-form-helper-text"
                            >
                              <div
                                class="FormError--errorDiv"
                                data-name="referenceConnector"
                              >
                                <span
                                  class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                                  data-icon="circle-cross"
                                >
                                  <svg
                                    height="12"
                                    viewBox="0 0 13 13"
                                    width="12"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      clip-rule="evenodd"
                                      d="M0.166687 6.5013C0.166687 9.99911 3.00222 12.8346 6.50002 12.8346C9.99782 12.8346 12.8334 9.99911 12.8334 6.5013C12.8334 3.0035 9.99782 0.167969 6.50002 0.167969C3.00222 0.167969 0.166687 3.0035 0.166687 6.5013ZM4.23841 3.498L6.49799 5.76096L8.76198 3.49767C9.25705 3.00275 9.99831 3.74646 9.50325 4.24137L7.23992 6.504L9.49411 8.76157C9.98873 9.25693 9.2468 9.99996 8.75218 9.5046L6.49732 7.24638L4.23807 9.50494C3.74301 9.99985 3.00174 9.25615 3.49681 8.76123L5.75539 6.50334L3.49648 4.24104C3.00186 3.74568 3.74379 3.00264 4.23841 3.498Z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                                <span
                                  class="FormError--error"
                                >
                                  Select a connector
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                        <a
                          class="createNewConnCta"
                          href="/account/undefined/settings/resources/connectors"
                          target="_blank"
                        >
                          <button
                            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
                            type="button"
                          >
                            <span
                              class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                              icon="plus"
                            >
                              <svg
                                data-icon="plus"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <desc>
                                  plus
                                </desc>
                                <path
                                  d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                            <span
                              class="bp3-button-text"
                            >
                              connectors.ceK8.overview.createNewConnectorCta
                            </span>
                          </button>
                        </a>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main main formElm nameField"
                      >
                        <div
                          class="InputWithIdentifier--txtNameContainer TextInput--main"
                        >
                          <div
                            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                          >
                            <div
                              class="Text--withDocsTooltip"
                              data-tooltip-id="overViewStepForm_identifier"
                            >
                              <p
                                class="StyledProps--font StyledProps--main"
                              >
                                Id
                              </p>
                            </div>
                            <p
                              class="StyledProps--font StyledProps--main"
                            >
                              :
                            </p>
                            <span
                              class="bp3-popover-wrapper"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <div
                                  class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                                  tabindex="0"
                                >
                                  <span
                                    class="bp3-editable-text-content"
                                    style="height: 1px; line-height: 1px; min-width: 0;"
                                  />
                                </div>
                              </span>
                            </span>
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="Edit"
                              style="vertical-align: middle; cursor: pointer;"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 16 16"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <path
                                  clip-rule="evenodd"
                                  d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                  opacity="0.3"
                                />
                              </svg>
                            </span>
                          </div>
                          <div
                            class="bp3-form-group bp3-intent-danger"
                            data-id="name-1"
                          >
                            <label
                              class="bp3-label"
                              for="name"
                            >
                              <span
                                class="Tooltip--acenter"
                                data-tooltip-id="overViewStepForm_name"
                              >
                                name
                              </span>
                               
                              <span
                                class="bp3-text-muted"
                              />
                            </label>
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="bp3-input-group bp3-intent-danger"
                              >
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="name"
                                  placeholder="common.namePlaceholder"
                                  type="text"
                                  value=""
                                />
                              </div>
                              <div
                                class="bp3-form-helper-text"
                              >
                                <div
                                  class="FormError--errorDiv"
                                  data-name="name"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                                    data-icon="circle-cross"
                                  >
                                    <svg
                                      height="12"
                                      viewBox="0 0 13 13"
                                      width="12"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        clip-rule="evenodd"
                                        d="M0.166687 6.5013C0.166687 9.99911 3.00222 12.8346 6.50002 12.8346C9.99782 12.8346 12.8334 9.99911 12.8334 6.5013C12.8334 3.0035 9.99782 0.167969 6.50002 0.167969C3.00222 0.167969 0.166687 3.0035 0.166687 6.5013ZM4.23841 3.498L6.49799 5.76096L8.76198 3.49767C9.25705 3.00275 9.99831 3.74646 9.50325 4.24137L7.23992 6.504L9.49411 8.76157C9.98873 9.25693 9.2468 9.99996 8.75218 9.5046L6.49732 7.24638L4.23807 9.50494C3.74301 9.99985 3.00174 9.25615 3.49681 8.76123L5.75539 6.50334L3.49648 4.24104C3.00186 3.74568 3.74379 3.00264 4.23841 3.498Z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                  <span
                                    class="FormError--error"
                                  >
                                    validation.connectorName
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main"
                        >
                          <label
                            class="Label--main bp3-label descriptionLabel"
                          >
                            optionalField
                            <span
                              class="bp3-icon StyledProps--main editOpen"
                              data-icon="Edit"
                              data-name="edit"
                              data-testid="description-edit"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 16 16"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <path
                                  clip-rule="evenodd"
                                  d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                  opacity="0.3"
                                />
                              </svg>
                            </span>
                          </label>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main"
                        >
                          <label
                            class="Label--main bp3-label descriptionLabel"
                          >
                            optionalField
                            <span
                              class="bp3-icon StyledProps--main editOpen"
                              data-icon="Edit"
                              data-name="edit"
                              data-testid="tags-edit"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 16 16"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <path
                                  clip-rule="evenodd"
                                  d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                  opacity="0.3"
                                />
                              </svg>
                            </span>
                          </label>
                        </div>
                      </div>
                    </div>
                    <div
                      class="Layout--horizontal StyledProps--main"
                    >
                      <button
                        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
                        type="submit"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          <span>
                            saveAndContinue
                          </span>
                        </span>
                        <span
                          class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                          icon="chevron-right"
                        >
                          <svg
                            data-icon="chevron-right"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              chevron-right
                            </desc>
                            <path
                              d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
        <span
          class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
          data-icon="harness-with-color"
        >
          <svg
            height="346"
            viewBox="0 0 25 25"
            width="346"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m22.9736 8.18585-6.2654-6.30553c-.1103-.11108-1.0951-1.07656-2.5893-1.572117-2.1394-.717703-4.26188-.153793-5.98529 1.572117l-6.26542 6.30553c-.11036.11107-1.069701 1.10219-1.562105 2.60595-.713136 2.1531-.152815 4.2891 1.562105 6.0236l6.26542 6.3055c.11037.1111 1.09517 1.0766 2.58939 1.5807.6112.205 1.214.3076 1.8083.3076 1.5027 0 2.9459-.6408 4.1769-1.8797l6.2654-6.3056c.1104-.111 1.0698-1.1022 1.5622-2.6059.7131-2.1617.1528-4.2977-1.5622-6.03215zm-10.0688-4.4771c.7047.2136 1.231.70061 1.2735.73479l1.8508 1.86261-3.6082 3.63124-3.60811-3.63124 1.85921-1.87115c.5009-.49556 1.1971-1.03384 2.2328-.72625zm-9.21981 8.30485c.21225-.7092.69616-1.2389.73012-1.2816l1.85076-1.86262 3.60813 3.63122-3.60813 3.6313-1.85925-1.8712c-.4924-.5041-1.02726-1.2133-.72163-2.2471zm8.25201 9.2789c-.7046-.2136-1.231-.7006-1.2735-.7348l-1.85071-1.8626 3.60811-3.6313 3.6082 3.6313-1.8593 1.8711c-.5009.4956-1.2055 1.0339-2.2328.7263zm9.2198-8.3049c-.2122.7092-.6961 1.2389-.7301 1.2816l-1.8507 1.8627-3.6082-3.6313 3.6082-3.63122 1.8592 1.87112c.4924.5041 1.0273 1.2047.7216 2.2471z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;
